# study

./: README.md
algorithm/dynamic_programing/: problem
algorithm/src/: CMakeLists.txt  doc.cxx
algorithm/src/tutorial/divide_and_conquer/: CMakeLists.txt  find_max_subarr.cxx  find_two_added.cxx
bash/: l  log
bash/array/: array.sh
bash/extension/: exten.sh
bash/function/: a  function.sh  typescript
bash/hello_world/: hello_world.sh
bash/interactive/: answer  answer.sh  interactive.sh
bash/parallel/: parallel.sh
bash/rename/: rename.sh
bash/replay/: olog  tlog
bash/sort/: c.txt  data.txt  sort.sh
bash/split/: split.sh
bash/temp/: temp.sh
bash/tr/: sum_mix.txt  tr.sh
bash/variable/: variable.sh
bash/xargs/: example  log  xargs.sh
concurrency/chapter10/: execution_seq.cxx
concurrency/chapter7/: compare_exchange_weak.cxx
cppreference/c++17/: main.cxx
cppreference/define/: main.cxx
cppreference/pmr/: main.cxx
cppreference/std_reduce/: main.cxx
cppreference/three_way_comparison/: main.cxx
cppreference/weak/: main.cxx
effective/26/: main.cxx
effective/27/: main.cxx
effective/28/: main.cxx
effective/35/src/: CMakeLists.txt  README  main.cxx
effective/35/src/classic_strategy/: CMakeLists.txt  example_cstgy.cxx  example_cstgy.h  strategy.cxx  strategy.h
effective/35/src/fun_obj/: CMakeLists.txt  example_fobj.cxx  example_fobj.h
effective/35/src/strategy/: CMakeLists.txt  example_stgy.cxx  example_stgy.h
effective/35/src/tpm/: CMakeLists.txt  example_tpm.cxx  example_tpm.h
mysql_cppconn/src/: CMakeLists.txt  mysql_cpp_conn.cxx
mysql_cppconn/src/connector/: connector.h
mysql_cppconn/src/with_exception_handling/: with_exception_handling.cxx
work/: hello  hello.cxx  host  host.cxx  main.cxx  slave  slave.c
(+280 files in other folders)
